# aoc24

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  justfile
include/: day1.h  day2.h  utils.h
src/: day1.cpp  day2.cpp
